GDR-036 fix extra space on bottom on mobile devices

--- a/client/src/components/mobile-menu/mobile-menu.scss
+++ b/client/src/components/mobile-menu/mobile-menu.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
   }
-
   background: $gradient-black-green-3;
   display: none;
   height: 100vh;
@@ -23,6 +22,10 @@
 
   &.closed {
     right: -320px;
+  }
+
+  &.should-hide {
+    display: none;
   }
 
   .close-button {
